--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+emojis = "0.8.0"
 libc = "0.2"
+unicode-segmentation = "1.12.0"
+unicode-width = "0.2.2"
 signal-hook = "0.4"
