--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,8 @@ unicode-segmentation = "1.12.0"
 unicode-width = "0.2.2"
 signal-hook = "0.4"
 markdown = "1.0.0"
+
+[features]
+# Phase 6: explicit opt-in escape hatch for extensions that must perform raw terminal I/O.
+# See `src/runtime/tui.rs` for the contract and self-healing resync behavior.
+unsafe-terminal-access = []
