runtime: enforce command-drain ordering for render_now and lock unsafe-access policy wording
Architecture summary:
- The runtime now treats `render_now()` as a deterministic render boundary that first drains and applies pending command-bus work, then reconciles focus, then renders and flushes.
- This aligns `render_now()` with the same ownership/mutation model used by `run_once()` and the coalesced loop: queued `Command`s are applied by runtime-owned state mutation before any frame generation.
- The `unsafe-terminal-access` feature remains an explicit opt-in escape hatch; wording in Cargo metadata now avoids roadmap/phase terminology while preserving the contract pointer to runtime docs.

Scope:
- Update `TuiRuntime::render_now()` to drain `RuntimeWake` command queue and call `apply_pending_commands(...)` before forcing render.
- Reconcile focus before render in `render_now()` so overlay/focus intent from queued commands is reflected in the forced frame.
- Add regression test `render_now_applies_queued_commands_before_render` that dispatches a queued `RootSet` command and verifies the forced render includes the updated root.
- Update Cargo feature comment to remove phase language and keep intent-focused wording.

Non-goals:
- No changes to IPC/scripting surface.
- No changes to command enum shape or serialization strategy.
- No changes to unsafe-terminal-access behavior itself (feature remains available and opt-in).

Implementation plan and decisions captured:
- Keep a single mutation path: command queue drains via existing `apply_pending_commands` logic even for immediate render path.
- Preserve output-gate behavior: `render_now()` still renders once and flushes through `OutputGate`; this commit only moves command application before render.
- Preserve coalescing design and latency bounds: no changes to `run_coalesced_once` budget behavior.

Key invariants:
- Deterministic ordering: queued commands apply before render decision in `run_once`, `run_coalesced_once`, an

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ signal-hook = "0.4"
 markdown = "1.0.0"
 
 [features]
-# Phase 6: explicit opt-in escape hatch for extensions that must perform raw terminal I/O.
+default = []
+# Explicit opt-in escape hatch for extensions that must perform raw terminal I/O.
 # See `src/runtime/tui.rs` for the contract and self-healing resync behavior.
 unsafe-terminal-access = []
