Refine coding_agent UX around inline editor-first interaction and workspace policy layering
Architecture summary
- Keep the coding agent as a single-process inline-first runtime with direct App method dispatch and a narrow HostOps side-effect seam.
- Preserve the existing state/runtime model while upgrading the UI integration to use tape_tui Editor for input behavior, focus semantics, and render loop participation.
- Keep the repository root as workspace owner and include the coding_agent crate as a first-class member so root-level -p commands are deterministic.

Scope and non-goals
- In scope: coding_agent UI behavior upgrades, streaming feel improvements in mock model output cadence, focus wiring, and tests that validate inline interactivity while running.
- In scope: repository policy split between root AGENTS defaults and crate-local AGENTS constraints.
- Out of scope: plugin/bus/ABI/PTY architecture, external extension loading, and runtime model refactors.

Intent and constraints
- The previous prompt input path was manually managed in the component and produced basic interaction quality.
- The objective is to make the agent feel like an actual coding tool while preserving deterministic runtime invariants:
  - inline scrollback behavior
  - one active run model
  - stale run safety in App
  - idempotent cancel behavior
  - predictable teardown
- Maintain legibility and avoid introducing new framework layers.

Implementation details
- crates/coding_agent/src/tui.rs
  - Replace ad-hoc text editing path with Editor-backed composer behavior.
  - Add editor on_change/on_submit wiring into App + HostOps flow.
  - Keep Esc and Ctrl+C handling explicit in component event handling.
  - Render a richer inline layout with header/context/command guide and status line near composer so active state remains visible during transcript growth.
  - Add streaming spinner/status rendering and helper formatting functions.
  - Add ANSI-aware wrapping helpers used by message rendering

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,13 @@ name = "tape_tui"
 version = "0.1.0"
 edition = "2021"
 
+[workspace]
+members = [
+  ".",
+  "crates/coding_agent",
+]
+resolver = "2"
+
 [dependencies]
 emojis = "0.8.0"
 libc = "0.2"
