--- a/crates/codex_api/Cargo.toml
+++ b/crates/codex_api/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 regex = "1.11.1"
 reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
 futures-util = "0.3"
+base64 = "0.22"
+libc = "0.2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1", features = ["time"] }
