coding_agent: import shared provider lifecycle types
Architecture summary:
The coding_agent crate now consumes shared run-lifecycle data shapes from the dedicated agent_provider crate instead of defining local duplicates. Runtime ownership boundaries stay the same: RuntimeController still controls queuing, drain ordering, and app state mutation, while provider contracts now share one canonical request/event/profile representation.

Scope and non-goals:
- Scope: dependency wiring and contract-type surface migration for run requests, run events, provider profile metadata, and cancel signal typing.
- Non-goals: no behavioral changes to single-active-run scheduling, stale-run event isolation, cancel idempotency, or renderer/event sequencing.

Implementation details:
- Added agent_provider as a direct dependency of coding_agent and updated lockfile resolution.
- Replaced local RunRequest, RunEvent, ProviderProfile, and cancel signal type definitions in coding_agent::provider with re-exports from agent_provider.
- Updated RuntimeController to consume the shared RunEvent type and removed the duplicate runtime-local event enum implementation.
- Aligned provider-profile field naming to thinking_level in runtime UI metadata rendering and in all contract-oriented tests that construct ProviderProfile values.

Key invariants and decisions:
- Event buffering, dispatch triggering, and terminal cleanup logic remain unchanged.
- Deterministic event ordering is preserved because all events still pass through the same pending queue and drain command path.
- This commit is intentionally type-focused to isolate contract migration from upcoming runtime/provider signature changes.

--- a/crates/coding_agent/Cargo.toml
+++ b/crates/coding_agent/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 wait-timeout = "0.2"
 tape_tui = { path = "../.." }
+agent_provider = { path = "../agent_provider" }
 
 [dev-dependencies]
 tempfile = "3"
