--- a/crates/coding_agent/Cargo.toml
+++ b/crates/coding_agent/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 wait-timeout = "0.2"
 tape_tui = { path = "../.." }
 agent_provider = { path = "../agent_provider" }
+agent_provider_mock = { path = "../agent_provider_mock" }
 
 [dev-dependencies]
 tempfile = "3"
