--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 members = [
   ".",
   "crates/agent_provider",
+  "crates/agent_provider_codex_api",
   "crates/agent_provider_mock",
   "crates/coding_agent",
   "crates/codex_api",
