--- a/crates/agent_provider_codex_api/Cargo.toml
+++ b/crates/agent_provider_codex_api/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 agent_provider = { path = "../agent_provider" }
 codex_api = { path = "../codex_api" }
 tokio = { version = "1", features = ["rt", "time"] }
+url = "2"
