--- a/crates/coding_agent/Cargo.toml
+++ b/crates/coding_agent/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 wait-timeout = "0.2"
+serde_json = "1"
 tape_tui = { path = "../.." }
 agent_provider = { path = "../agent_provider" }
 agent_provider_mock = { path = "../agent_provider_mock" }
