coding_agent: bootstrap codex provider from strict JSON file path
Architecture summary:
- Keep provider selection centralized in providers::provider_from_env with explicit provider IDs and no implicit fallback behavior.
- For codex-api, collapse runtime bootstrap into a single environment input (CODING_AGENT_CODEX_CONFIG_PATH) that points to one JSON file.
- Retain provider construction boundaries: coding_agent validates bootstrap shape/contract, while agent_provider_codex_api owns transport/client initialization.

Scope:
- Replace the previous inline JSON env bootstrap (CODING_AGENT_CODEX_API_CONFIG_JSON) with file-path-based bootstrap.
- Introduce a strict typed bootstrap struct with serde deny_unknown_fields.
- Remove startup configurability for base_url and session_id from coding_agent bootstrap.
- Preserve and include existing staged dependency/lockfile updates in this commit (crates/coding_agent/Cargo.toml and Cargo.lock).
- Add explicit bootstrap validation and failure-path tests for codex provider startup contract.

Implementation details:
- Added CODEX_CONFIG_PATH_ENV_VAR (CODING_AGENT_CODEX_CONFIG_PATH).
- Added CodexBootstrapConfig { access_token, models, timeout_sec } with strict unknown-key rejection.
- Implemented file-based load path with explicit errors for missing env var, empty env var, unreadable file, and invalid JSON.
- Added semantic validation for non-empty access_token, non-empty trimmed models, and timeout_sec > 0 when present.
- Mapped codex init failures that indicate missing account context to an actionable JWT claim requirement message (https://api.openai.com/auth.chatgpt_account_id).
- Added codex bootstrap tests covering required failure and success paths (missing path, unreadable file, invalid JSON, unknown field, missing fields, empty values, zero timeout, missing JWT account claim, and happy path).

Key invariants and decisions:
- Provider startup remains explicit and deterministic: invalid selection or bootstrap configuration alway

--- a/crates/coding_agent/Cargo.toml
+++ b/crates/coding_agent/Cargo.toml
@@ -5,10 +5,12 @@ edition = "2021"
 
 [dependencies]
 wait-timeout = "0.2"
+serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tape_tui = { path = "../.." }
 agent_provider = { path = "../agent_provider" }
 agent_provider_mock = { path = "../agent_provider_mock" }
+agent_provider_codex_api = { path = "../agent_provider_codex_api" }
 
 [dev-dependencies]
 tempfile = "3"
