Port Codex apply_patch engine and wire deterministic host tool end-to-end
Architecture summary
This change introduces a dedicated apply_patch_engine workspace crate that vendors the upstream Codex apply-patch parsing/verification/application logic, and then integrates that engine into the existing provider-agnostic coding_agent host-tool surface as a first-class apply_patch tool. The codex API provider now advertises apply_patch in its tool contract and roundtrips its results through the existing serial host tool execution channel.

The overall layering after this commit is:
- apply_patch_engine: upstream-derived parser/invocation/apply semantics + local provenance/compliance artifacts.
- coding_agent: deterministic workspace-guarded execution of apply_patch through BuiltinToolExecutor.
- agent_provider_codex_api: tool definition exposure + tool call acceptance + function_call_output roundtrip handling for apply_patch.

Scope
- Add new crate crates/apply_patch_engine and register it in workspace.
- Import/adapt upstream Codex apply-patch sources required by the engine runtime surface:
  - parser.rs
  - invocation.rs
  - lib.rs
  - minimal helper modules referenced by the imported engine logic (seek_sequence.rs, standalone_executable.rs, main.rs).
- Add attribution/compliance/provenance files for imported code:
  - UPSTREAM.md
  - NOTICE
  - LICENSE (Apache-2.0 text)
  - apply_patch_tool_instructions.md
- Add apply_patch host tool variant and executor path in coding_agent.
- Extend runtime tool dispatch and argument parsing for apply_patch.
- Extend codex provider v1 tool set to include apply_patch and add roundtrip tests.
- Update lockfile for new dependencies required by imported engine.

Non-goals explicitly preserved
- No import of Codex orchestrator/runtime/sandbox stacks.
- No fallback behavior when tool parsing/execution fails.
- No parallel tool execution introduction; execution remains serial and deterministic.
- No expansion of provider contract outside app

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
   "crates/agent_provider",
   "crates/agent_provider_codex_api",
   "crates/agent_provider_mock",
+  "crates/apply_patch_engine",
   "crates/coding_agent",
   "crates/codex_api",
 ]
