--- a/crates/coding_agent/Cargo.toml
+++ b/crates/coding_agent/Cargo.toml
@@ -11,6 +11,7 @@ tape_tui = { path = "../.." }
 agent_provider = { path = "../agent_provider" }
 agent_provider_mock = { path = "../agent_provider_mock" }
 agent_provider_codex_api = { path = "../agent_provider_codex_api" }
+apply_patch_engine = { path = "../apply_patch_engine" }
 
 [dev-dependencies]
 tempfile = "3"
