--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,12 @@ resolver = "2"
 [dependencies]
 emojis = "0.8.0"
 libc = "0.2"
+markdown = "1.0.0"
+once_cell = "1"
+signal-hook = "0.4"
+syntect = "5"
 unicode-segmentation = "1.12.0"
 unicode-width = "0.2.2"
-signal-hook = "0.4"
-markdown = "1.0.0"
 
 [features]
 default = []
