Introduce session_store crate skeleton and strict v1 schema contracts
Architecture summary:
- Adds a dedicated session_store workspace crate to isolate persistent-session data contracts from coding_agent runtime/provider orchestration.
- Defines strict JSONL schema record types for v1 session headers and entries, including entry kind variants for user_text, assistant_text, tool_call, and tool_result.
- Establishes a typed error boundary that always carries operation/file context and line context for parse/validation failures.

Scope:
- Wires crates/session_store into the workspace members list.
- Adds session_store as a path dependency in crates/coding_agent/Cargo.toml so later runtime wiring can depend on the new crate boundary.
- Adds initial crate modules and exports:
  - schema (strict serialized contracts)
  - error (explicit fail-closed error variants)
  - paths (session root and filename helpers)
  - store (SessionStore API surface scaffold)
  - replay (replay API surface scaffold)

Intent and constraints:
- Preserve fail-closed parsing intent at the type level by rejecting unknown fields in schema structs and entry payload variants.
- Keep this commit focused on foundational contracts and crate wiring so later commits can layer strict open/graph validation and durability semantics without cross-cutting refactors.
- Maintain the established repository separation of concerns: persistence state model in its own crate, runtime integration deferred.

Non-goals captured in this change:
- No session resume/fork/session-picker UX.
- No memory reset semantics (including clear-style markers).
- No migration logic beyond strict v1 contracts.
- No coding_agent runtime/provider behavior changes yet.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = [
   "crates/apply_patch_engine",
   "crates/coding_agent",
   "crates/codex_api",
+  "crates/session_store",
 ]
 resolver = "2"
 
