--- a/crates/coding_agent/Cargo.toml
+++ b/crates/coding_agent/Cargo.toml
@@ -10,6 +10,7 @@ agent_provider_mock = { path = "../agent_provider_mock" }
 apply_patch_engine = { path = "../apply_patch_engine" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+session_store = { path = "../session_store" }
 tape_tui = { path = "../.." }
 wait-timeout = "0.2"
 
