--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "tape_tui"
 version = "0.1.0"
 edition = "2021"
-description = "Build coding agents, chats, REPLs with deterministic, crash-safe terminal UI kernel with differential rendering."
+description = "Deterministic inline TUI for transcript-style coding agents, chats, and REPLs with built-in markdown syntax highlighting and predictable behavior under input, resize, layering, and teardown pressure."
 license = "MIT"
 repository = "https://github.com/Gurpartap/tape_tui"
 homepage = "https://github.com/Gurpartap/tape_tui"
